<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SpecialWarningActivity">

    <TextView
        android:id="@+id/selectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/specialWarning"
        android:textColor="@color/light_blue01"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <FrameLayout
        android:id="@+id/spWarning_noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/noData"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/spWarning_yesDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/spWarning_downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mapDownload"
            android:textSize="15sp"
            android:textColor="@color/light_blue01"
            android:background="@drawable/frame_btn_event01" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/countryName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/spWarning_countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/region"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/spWarning_regionTy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bego"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/spWarning_bego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>