<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.ImmigrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/immigrationRequirement"
        android:textColor="@color/light_blue01"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <FrameLayout
        android:id="@+id/im_noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/noData"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/im_yesDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/countryName"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_countryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/haveYn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_haveYn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaYn01"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_visaYn01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaCn01"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_visaCn01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaYn02"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_visaYn02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaCn02"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_visaCn02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaYv03"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/im_visaYn03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/visaCn03"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_visaCn03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/entryCn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_entryCn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/im_remarkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/bego"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/im_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>