<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.WarningActivity">

    <TextView
        android:id="@+id/selectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/warning"
        android:textColor="@color/light_blue01"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <FrameLayout
        android:id="@+id/warning_noDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/noData"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/warning_yesDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/warning_whatIsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatIsWarning"
                    android:textSize="16sp"
                    android:textColor="@color/light_blue01"
                    android:background="@drawable/frame_btn_event01"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/warning_downloadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/mapDownload"
                    android:textSize="16sp"
                    android:textColor="@color/light_blue01"
                    android:background="@drawable/frame_btn_event01"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/countryName"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/warning_countryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/warningLevel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/warning_warningLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/warning_warningLevelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/region"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/warning_regionTy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/bego"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/warning_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>