<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CountrySearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/main_title"
        android:textColor="@color/light_blue01"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/text01"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <EditText
                android:id="@+id/main_countryEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/frame_blackline_white"
                android:autofillHints="no"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/main_hint01"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/main_clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="15dp"
                android:background="@drawable/close"
                android:visibility="invisible"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/frame_btn_event02"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_countryRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:background="@drawable/frame_blackline_white"/>

</LinearLayout>